<resources>
    <string name="app_name">Remi</string>
    <string name="app_version" translatable="false">2.0</string>
    <string name="app_version_full" translatable="false">App Version 2.0</string>


    <string name="tab_mouse">Mouse</string>
    <string name="tab_files">Files</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_slides">Slides</string>

    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <string name="label_help">Help</string>

    <!-- Preferences -->
    <string name="prefs_category_mouse_and_keyboard">Mouse &amp; Keyboard</string>
    <string name="prefs_title_simple_mouse">Mouse sensitivity</string>
    <string name="prefs_key_simple_mouse" translatable="false">key_simple_mouse</string>
    <string name="prefs_title_scrolling">Scroll sensitivity</string>
    <string name="prefs_key_keyboard_theme" translatable="false">key_keyboard_layout</string>
    <string name="prefs_key_scrolling" translatable="false">key_scrolling</string>
    <string name="prefs_key_keys_auth_desktops" translatable="false">prefs_key_keys_auth_desktops</string>
    <string name="prefs_key_keys_reset" translatable="false">prefs_key_keys_reset</string>
    <string name="prefs_title_authorized_desktop">Authorized desktops</string>
    <string name="prefs_title_keys_reset">Reset keys</string>
    <string name="prefs_keyboard_summary_off">Light keyboard</string>
    <string name="prefs_keyboard_summary_on">Dark keyboard</string>
    <string name="prefs_title_keyboard">Keyboard theme</string>
    <string name="prefs_cat_keys">Key Management</string>

    <string name="prefs_cat_about">About</string>
    <string name="prefs_title_developer">Developer</string>
    <string name="prefs_summary_developer" translatable="false">Shockbytes Studio (c) 2015 - 2017</string>
    <string name="prefs_title_version" translatable="false">Version</string>
    <string name="prefs_title_icons" translatable="false">Icons</string>
    <string name="prefs_summary_icons" translatable="false">iconfinder.com\nflaticon.com</string>

    <!-- Help Strings -->
    <string name="help_mouse_move">Move your finger to move the mouse</string>
    <string name="help_mouse_left_click">Click with one finger for left mouse click</string>
    <string name="help_mouse_right_click">Long click with one finger for right mouse click</string>
    <string name="help_mouse_scrolling">Move with two fingers vertically for scrolling</string>

    <string name="help_apps">
        With this function you can start your favourite apps directly from your phone with a single click.
        \n\n
        How to add them:
        \n\n
        > Switch to Files tab \n
        > Navigate to executable \n
        > Click on the overflow icon \n
        > Click \&#39;Add to  apps\&#39; \n
        \n\nYou can only add apps if they are marked as executable on the desktop operating system.
    </string>
    <string name="help_files">
        Explore all your files on your desktop!
        \n\n
        > Browse through your filesystem \n
        > Add apps to your list \n
        > Transfer files to your device \n
        > Open files on the desktop \n
        > Get powerpoint slides preview on your phone \n
        \n\nFile transfer and file explorer can be manually disabled on the desktop app.
    </string>
    <string name="help_slides">
        Let me help you while you hold a presentation!
        \n\n
        > Navigate to next/previous slide \n
        > See the time you are presenting \n
        > Start fullscreen mode of presentation \n
        > Request slides preview from your desktop \n
        \n\nSlides preview only works with Microsoft powerpoint files.
    </string>


    <!-- Content descriptions -->
    <string name="contentdesc_icon">App icon</string>
    <string name="contentdesc_help_icon">Help app icon</string>

    <string name="connection_error_already_connected">Desktop connected to other client</string>
    <string name="connection_error_unknown">Unknown error</string>
    <string name="connection_error_network">Network error</string>


    <string name="fragment_slides_open_in_files">Open power point presentation in files to get slides preview</string>
    <string name="fragment_slides_requesting_slides">Requesting slides&#8230;</string>
    <string name="fragment_slides_loading_error">Cannot load slides</string>
    <string name="popup_files_add_to_apps">Add to apps</string>
    <string name="popup_files_copy_to_phone">Copy to phone</string>
    <string name="popup_files_open_on_desktop">Open on desktop</string>
    <string name="popup_files_open_in_slides_tab">Open in Slides tab</string>
    <string name="apps_no_apps">No apps in your app list</string>
    <string name="help_category">Help for category</string>
    <string name="keyboard_abc">ABC</string>
    <string name="login_welcome">Welcome to Remi</string>
    <string name="login_look_for_devices">Look for devices</string>
    <string name="fragment_slides_start">START</string>
    <string name="desktop_apps_trusted">TRUSTED</string>
    <string name="desktop_apps_untrusted">UNTRUSTED</string>
    <string name="keyboard_space">SPACE</string>
    <string name="wear_device">Wear device</string>
    <string name="apps_remove_app">Remove app</string>
    <string name="permission_keyboard">No permission for keyboard!</string>
    <string name="dev_mode" translatable="false">Dev mode</string>
    <string name="wear_connected">Wearable connected</string>
    <string name="connected_to">Connected to %s</string>
    <string name="wearable_connection_active">Wearable control active</string>
    <string name="disconnected">Disconnect</string>
    <string name="disconnection_error">Disconnection error</string>
    <string name="desktop_disconnected">Desktop disconnected</string>
    <string name="desktop_disconnection_error">Cannot listen for connection loss</string>
    <string name="apps_request_error">Cannot request apps</string>
    <string name="permission_apps">No permission to request apps!</string>
    <string name="apps_start">Start %s</string>
    <string name="permission_mouse">No permission for mouse!</string>
    <string name="permission_files">No permission to request files!</string>
    <string name="files_request_error">Can\'t access files</string>
    <string name="rationale_external_storage">Store the transferred file into the downloads folder</string>
    <string name="filetransfer_finished">%s copied to device</string>
    <string name="filetransfer_initiated">Copying %s</string>
    <string name="files_menu_add_to_apps">%s added to apps</string>
    <string name="files_menu_open_on_desktop">%s will be opened on desktop</string>
    <string name="filetransfer_finished_w_error">%s could not be stored on device!</string>
    <string name="notification_channel_transfer">Transfer</string>
    <string name="notification_ft_title">Transferring</string>
    <string name="filetransfer_cancelled">File transfer cancelled</string>
    <string name="filetransfer_error_no_access">No access rights for file</string>
    <string name="filetransfer_error_too_big">Files bigger than 5MB cannot be transferred yet!</string>
    <string name="filetransfer_error_encoding">File could not be loaded</string>
    <string name="filetransfer_error_unintialized">Oops, this error should not occur</string>

    <!-- AppTour -->
    <string name="apptour_title_1">Welcome to Remi</string>
    <string name="apptour_title_2">Apps, Mouse, Files &amp; Slides</string>
    <string name="apptour_title_3">Get the Desktop App</string>
    <string name="apptour_title_4">Use Remi on your wrist</string>
    <string name="apptour_title_5">Everything\'s fine?</string>
    <string name="apptour_description_1">Just follow the simple steps and see what you can do with Remi and how to connect to your computer.</string>
    <string name="apptour_description_2">Remi let\'s you easily control  your mouse, view all your files, transfer files to your phone, start apps and control your current slideshow.</string>
    <string name="apptour_description_3">Download the Desktop App from \n<b>\'shockbytes.github.io/Remi\'</b>\n for your operating system. The Desktop App needs to run in the same Wifi as the phone in order to establish a connection.</string>
    <string name="apptour_description_4">Remi can also be used on your smart watch. It allows you to start your apps, click your mouse and control your presentation. The smartphone app must be active during the usage.</string>
    <string name="apptour_description_5">Ready to roll? Start the Desktop App and connect with your phone.</string>
    <string name="debug_options">Debug options</string>
    <string name="connect_with">Connect with %s</string>
    <string name="connect">Connect</string>
    <string name="connection_accept_confirmation">%s accepted the connection. Click connect to continue!</string>
    <string name="connection_accept_pending">Waiting for desktop to accept the connection&#8230;</string>
    <string name="connection_accept_reject">%s rejected your connection request!</string>
    <string name="reset">Reset</string>
    <string name="reset_keys">Reset keys</string>
    <string name="reset_keys_message">Do you really want to reset all keys and remove all trusted connections? This action will immediately stop the current session!\n\n<b>Normally you should not do this!</b></string>
    <string name="dialogfragment_authorized_desktops_title">Authorized desktops</string>
    <string name="show">Show</string>
    <string name="show_download_folder">Show Download Folder</string>
    <string name="slide_request_cancelled">Slide request cancelled!</string>
    <string name="debug_login" translatable="false">Debug login</string>
    <string name="debug_fake_devices" translatable="false">Fake devices</string>
    <string name="debug_regenerate_keys" translatable="false">Re-generate keys</string>
    <string name="debug_force_unauthorized_connection" translatable="false">Force unauthorized connection</string>

</resources>
