<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_category_mouse_and_keyboard" >

        <at.shockbytes.util.view.SliderPreference
            android:defaultValue="5"
            android:key="@string/prefs_key_simple_mouse"
            android:max="9"
            android:text=""
            android:title="@string/prefs_title_simple_mouse" />

        <at.shockbytes.util.view.SliderPreference
            android:defaultValue="2"
            android:key="@string/prefs_key_scrolling"
            android:max="9"
            android:text=""
            android:title="@string/prefs_title_scrolling"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_key_keyboard_theme"
            android:title="Use dark keyboard theme"
            android:summaryOn="Dark keyboard"
            android:summaryOff="Light keyboard"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_cat_about" >

        <Preference
            android:summary="@string/prefs_summary_developer"
            android:title="@string/prefs_title_developer" />

        <Preference
            android:summary="@string/prefs_summary_icons"
            android:title="@string/prefs_title_icons"/>

        <Preference
            android:summary="@string/app_version"
            android:title="@string/prefs_title_version" />
    </PreferenceCategory>

</PreferenceScreen>