<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        style="?android:borderlessButtonStyle"
        android:padding="4dp"
        android:fontFamily="sans-serif-light"
        android:id="@+id/dialogfragment_debug_options_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_login" />

    <Button
        style="?android:borderlessButtonStyle"
        android:padding="4dp"
        android:fontFamily="sans-serif-light"
        android:id="@+id/dialogfragment_debug_options_btn_fake_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_fake_devices" />

    <Button
        android:id="@+id/dialogfragment_debug_options_btn_key_recreation"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="4dp"
        android:text="@string/debug_regenerate_keys" />

    <Button
        android:id="@+id/dialogfragment_debug_options_btn_unauthorized_connection"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="4dp"
        android:text="@string/debug_force_unauthorized_connection" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version_full"
        android:fontFamily="sans-serif-light"
        android:textSize="12sp"
        android:gravity="center"/>


</LinearLayout>